@@ -10,6 +10,7 @@
   trailing separator
 - bugfix: disallow non-permitted control characters in strings and comments
 - bugfix: disallow invalid unicode in input
+- bugfix: allow double-zero exponents (e00)
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
